[package]
name = "mempool-history"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.19", features = ["derive", "env"] }
ethers = { version = "0.17.0", features = ["ws", "rustls"] }
futures-core = "0.3.24"
thiserror = "1.0.33"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
